--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
 
-
+*{
+    font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+    background-color: rgb(244, 242, 242);
+}
 
 body{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header,
+footer{
+    padding-left: 200px;
+}
+
+main{
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 700px;
+    height: 550px;
+    width: 1000px;
 }
 #container{
     display: grid;
@@ -13,24 +28,70 @@ body{
     height: 500px;
     grid-template-columns: repeat(16, 1fr);
     background-color: white;
+    box-shadow: 2px 2px rgb(0, 0, 0);
+    border: 1px solid black;
+
 
 }
 
 
 .cellDiv{
     display: flex; 
-    border: 1px solid black;
+    /* border: 1px solid black; */
     height: 30px;
     width: 30px;
+    background-color: white;
 }
 
 
 #buttons{
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    margin-right: 8px;
+    gap: 15px;
+    margin-right: 20px;
 }
 .btn-invisible {
-    display: none;
- }
+   display: none;
+}
+
+
+/* button style */
+
+
+
+/* CSS */
+button {
+  background: #e4e4e4;
+  border: 1px solid #e4e4e4;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 16px;
+  min-height: 40px;
+  outline: 0;
+  padding: 12px 14px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+}
+
+button:hover,
+button:active {
+  background-color: initial;
+  background-position: 0 0;
+  color: black;
+}
+
+button:active {
+  opacity: .5;
+}
