--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
 *{
     font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
     background-color: rgb(244, 242, 242);
+    color: rgb(91, 89, 89);
 }
+
 
 body{
     display: flex;
@@ -66,7 +68,7 @@ button {
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
   box-sizing: border-box;
-  color: #000000;
+  color: rgb(62, 61, 61);
   cursor: pointer;
   display: inline-block;
   font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
