--- a/style.css
+++ b/style.css
@@ -28,20 +28,15 @@ main{
     display: grid;
     width: 500px;
     height: 500px;
-    grid-template-columns: repeat(16, 1fr);
     background-color: white;
     box-shadow: 2px 2px rgb(0, 0, 0);
     border: 1px solid black;
-
 
 }
 
 
 .cellDiv{
-    display: flex; 
-    /* border: 1px solid black; */
-    height: 30px;
-    width: 30px;
+    border: 1px solid black;
     background-color: white;
 }
 
